# RPG-Map-Effects

./: .gitignore  CMakeLists.in-tree.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASING.md  buildspec.json  rpg-map-effects
.github/workflows/: build-project.yaml
cmake/macos/: helpers.cmake
scripts/: embed_cursors.py
src/: cursor_assets.h  obs_display_widget.hpp  obs_display_widget.mm  plugin-main.cpp  rpg_window.cpp  rpg_window.hpp
